# DLT-Kannel-SMS-Gateway

./: ChangeLog  Makefile.in  VERSION  aclocal.m4  bootstrap.sh  configure  configure.in
addons/sqlbox/gw/: sqlbox_mysql.c  sqlbox_mysql.h
doc/userguide/: userguide.xml
gw/: bb_boxc.c  bb_http.c  bb_smscconn.c  bearerbox.c  bearerbox.h  msg-decl.h  smsbox.c  smscconn.c  smscconn_p.h  urltrans.h  wap_push_ppg_pushuser.c
gw/smsc/: smpp_pdu.def  smpp_pdu_opt.def  smsc_http.c  smsc_sema.c  smsc_smpp.c
gw/smsc/http/: brunet.c  clickatell.c  generic.c  xidris.c
gwlib/: date.c  date.h  gwlib.h  http.c  octstr.c  pcre.c  regex.c  regex.h  semaphore.h
test/: fakewap.c  test_date.c  test_dbpool.c  test_http.c  test_pcre.c  test_regex.c
utils/: Makefile.am  Makefile.in
wmlscript/: wsint.h  wslexer.c
